--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
+<!DOCTYPE html>
 <html lang="ch">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=750, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/display.css">
+    <meta charset="utf-8">
+    <link href='./css/gssi.css' rel='stylesheet'></link>
+    <script src="./Vir/vir.js"></script>
 </head>
 
 <body>
-    <script src="Vir/Vir.js"></script>
-    <script src="display.js"></script>
+    <script id= 'job1' src= 'gssi.js' ></script>
+    <!-- <video controls="">
+        <source src="https://mdn.mozillademos.org/files/2587/AudioTest%20(1).ogg" type="audio/ogg">
+    </video> -->
 </body>
 
 </html>
