--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <link href='./css/gssi.css' rel='stylesheet'></link>
-    <script src="./Vir/vir.js"></script>
+    <script src="./Vir/Vir.js"></script>
 </head>
 
 <body>
